--- a/Udacity/contacts/src/App.css
+++ b/Udacity/contacts/src/App.css
@@ -28,6 +28,14 @@
   color: #61dafb;
 }
 
+.message-recipient{
+  color: green;
+}
+
+.message-sender{
+  color: blue;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
